Copyright (C) 2022 LANNOCC (Shawn A. Wilson [lannocc@yahoo.com])
@%@~LICENSE:MIT~@%@

saw_073022_9 - Windows: Fix unreliable mouse position while scrolling.

saw_073022_8 - Version bump: tested on Linux and Win7.

saw_073022_7 - Window movement (Windows).

saw_073022_6 - Window movement (Linux).

saw_073022_5 - Version bump: tested on Linux and Win7.

saw_073022_4 - Print containment on Windows.

saw_073022_3 - Normalized mouse input across platforms.

saw_073022_2 - Mouse input on Windows.

saw_073022_1 - Input wrangling and exception propagation.

saw_072922_3 - Version bump: tested on Linux and Win7.

saw_072922_2 - Beginning Windows backend.

saw_072922_1 - A possible approach to multiple backends.

saw_072822_6 - Some window fun.

saw_072822_5 - Bump version for pip platform dependency test.

saw_072822_4 - Test commit (turned on GPG sign in Windows).

saw_072822_3 - Add Windows support to mouse test script.

saw_072822_2 - Add a mouse test script.

saw_072822_1 - Initial commit (just termio.py from my vipy project).
