@@ -6,17 +6,13 @@ def run():
     try:
         win = Window(app, 30, 5, 42, 9)
         win.print('ESC to quit.')
-        win.print('Click drag and scroll test mouse.')
+        win.print('Click drag and scroll to test mouse.')
+        win.print()
         win.print("Here's something.", end=False)
         win.print(' And this continues the previous print and also wraps.')
-        #win.print('And here is something else!')
-        #win.print('And here is something else!')
-        #win.print('And here is something else!')
-        #win.print('And here is something else!')
-        #win.print('And here is something else!')
-        #win.print('Final thing.')
+        win.print()
 
-        #raise RuntimeError('oopsie')
+        #raise RuntimeError('__main__ test')
 
         app.run()
 
